# videoteco-fork

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  Makefile.wcc  README  README.md  config.h  config.h.in  configure  configure.ac  makefile.in  poll.h  syspoll.h  tecbuf.c  teccmd.c  tecdebug.c  tecdisp.c  tecexec.c  tecmem.c  teco.c  teco.h  tecparse.c  tecparse.h  tecstate.c  tecterm.c  tecundo.c  tecvms.h
doc/: Doxyfile.in  TECO Manual V4.html
